[package]
name = "ds18b20-2"
version = "0.1.1"
authors = ["Nathan Fox <fuchsnj@gmail.com>", "Dan Brown"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/dbdoesnerdstuff/ds18b20-2"
keywords = ["onewire", "embedded-hal-driver", "ds18b20", "temperature", "sensor"]
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
description = """
A Rust DS18B20 temperature sensor driver for [embedded-hal](https://github.com/rust-embedded/embedded-hal)
"""

[dependencies]
one-wire-bus-2 = {path = "../one-wire-bus-2"}
embedded-hal = "1.0.0"
